# ptrack

./: README.md
etc/: doxygen.cnf
images/: ptrack.qrc
src/: CMakeLists.txt  main.cpp  winIcon.rc
src/CMakeModules/: FindSQLITE3.cmake
src/ptrackData/: ActivityDb.cpp  ActivityDb.h  CMakeLists.txt  PTrackDataMacros.h  PTrackPreferencesData.cpp  PTrackPreferencesData.h
src/ptrackData/import/: GenericImport.cpp  GenericImport.h  SportTracksImport.cpp  SportTracksImport.h
src/ptrackUi/: ActivityFrame.cpp  ActivityFrame.h  ActivityFrameBase.ui  ActivityListWidget.cpp  ActivityListWidget.h  ActivityListWidgetItem.cpp  ActivityListWidgetItem.h  CMakeLists.txt  ImportDialog.cpp  ImportDialog.h  ImportDialogBase.ui  MapPage.cpp  MapPage.h  MapWidget.cpp  MapWidget.h  PTrackAboutDialog.cpp  PTrackAboutDialog.h  PTrackAboutDialogBase.ui  PTrackPreferencesDialog.cpp  PTrackPreferencesDialog.h  PTrackPreferencesDialogBase.ui  PTrackUi.cpp  PTrackUi.h  PTrackUiBase.ui  PTrackUiMacros.h
